@@ -193,7 +193,11 @@
         <h2>Syntax</h2>
     <pre class="Syntax"><code>Remove-User [-Username] &lt;String&gt; [-WhatIf] [-Confirm] [&lt;CommonParameters&gt;]</code></pre>
     
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>Removes a <em>local</em> user account.  If the account doesn't exist, nothing happens.</p>
+
+    </div>
     
     
 
@@ -248,6 +252,9 @@
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Remove-User -Username WTarkin</code></pre>
+            <p><p>Removes the <code>WTarkin</code> <em>local</em> user account.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
